--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
       </div>
     </header>
-    
+
     <section id="showcase">
       <div class="container">
         <h1>Full stack web developer</h1>
@@ -25,7 +25,7 @@
     </section>
     <section id="blog">
       <div class="container">
-        <h1>Check out my blog posts:</h1>
+        <h1>Check out my blog posts: <a href="https://leviknapa.github.io/">  Here</a></h1>
       </div>
 
     </section>
@@ -35,17 +35,37 @@
         <div class="box">
           <img src="./img/logo-2582748_1920.png">
            <h1>Html5</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+
         </div>
         <div class="box">
           <img src="./img/logo-2582747_640.png">
            <h1>CSS3</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+
         </div>
         <div class="box">
           <img src="./img/javascript-736400_640.png">
            <h1>JS</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+
+        </div>
+        <div class="box">
+          <img src="">
+           <h1>Ruby</h1>
+        </div>
+        <div class="box">
+          <img src="">
+           <h1>Rails</h1>
+        </div>
+        <div class="box">
+          <img src="<img src="https://img.icons8.com/plasticine/100/000000/react.png"/>">
+           <h1>React</h1>
+        </div>
+        <div class="box">
+          <img src="">
+           <h1>Redux</h1>
+        </div>
+        <div class="box">
+          <img src="">
+           <h1>SQL</h1>
         </div>
       </div>
 
